# ordl-phetamines

./: .gitignore  AGENTS.md  CONTRIBUTING.md  MEMORY.md  README.md  ordl_platform.db
.github/: FUNDING.yml
.secrets/: twilio.env
AGENTS/: AGENTS.md  DIRECTIVES.md  IDENTITY.md  KIMI-FLEET-SETUP.md  (+6 more)
ordl_platform/backend/: .env.example  README.md  pyproject.toml
ordl_platform/backend/app/: __init__.py  audit.py  authz.py  common.py  config.py  connectivity_monitor.py  db.py  dispatch.py  ingestion.py  main.py  models.py  policy.py  providers.py  rls.py  schemas.py  secrets.py  security.py  storage.py  worker.py
ordl_platform/backend/app/routers/: approvals.py  audit.py  auth.py  clearance.py  digestion.py  dispatch.py  extensions.py  governance.py  messages.py  models_governance.py  ops.py  orchestration.py  policy.py  programs.py  protocols.py  providers.py  seats.py  workers.py
ordl_platform/backend/tests/: conftest.py  test_audit_export.py  test_audit_trail.py  test_auth_token_security.py  test_authorization_matrix.py  test_config_and_input_validation.py  test_digestion_coverage.py  test_dispatch_execution_stream.py  test_extension_signatures.py  test_message_workflow.py  test_model_governance_policies.py  test_multi_tenant_isolation.py  test_orchestration_jobs.py  test_policy_no_bypass.py  test_program_management.py  test_protocol_standards.py  test_provider_credentials.py  test_rev8_contract_routes.py  test_rls_policy_catalog.py  test_worker_action_pipeline.py  test_worker_connectivity.py  test_worker_monitor_daemon.py  test_worker_update_and_discovery.py
(+530 files in other folders)
